erDiagram
    USERS ||--o{ PROJECTS : owns
    USERS ||--o{ USER_PROJECTS : joins
    PROJECTS ||--o{ USER_PROJECTS : has_members
    PROJECTS ||--o{ TASKS : contains
    USERS o|--o{ TASKS : assigned_to

    USERS {
        bigint user_id PK
        varchar name
        varchar email UK
    }

    PROJECTS {
        bigint project_id PK
        varchar project_name
        bigint owner_id FK
    }

    USER_PROJECTS {
        bigint user_id PK, FK
        bigint project_id PK, FK
        varchar role
        timestamptz joined_at
    }

    TASKS {
        bigint task_id PK
        varchar task_name
        bigint project_id FK
        bigint assigned_user_id FK
        varchar status
    }
